--- a/index.html
+++ b/index.html
@@ -95,6 +95,28 @@
        .admin-link a:hover, .admin-link button:hover {
            text-decoration: underline;
        }
+       .admin-login-container {
+           display: none; /* 初始隱藏登入畫面 */
+           position: fixed;
+           top: 50%;
+           left: 50%;
+           transform: translate(-50%, -50%);
+           background-color: #fff;
+           padding: 20px;
+           border-radius: 8px;
+           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+           z-index: 1000;
+       }
+       .overlay {
+           display: none; /* 初始隱藏遮罩層 */
+           position: fixed;
+           top: 0;
+           left: 0;
+           width: 100%;
+           height: 100%;
+           background-color: rgba(0, 0, 0, 0.5);
+           z-index: 999;
+       }
    </style>
 </head>
 <body>
@@ -125,7 +147,8 @@
    </div>
 
    <!-- 管理員登入表單 -->
-   <div class="admin-login" id="adminLogin" style="display: none;">
+   <div class="overlay" id="overlay"></div>
+   <div class="admin-login-container" id="adminLogin">
        <h2>管理員登入</h2>
        <form id="loginForm">
            <div class="form-group">
@@ -146,31 +169,68 @@
        // 處理表單提交事件
        document.getElementById('repairForm').addEventListener('submit', function(event) {
            event.preventDefault(); // 防止表單提交
-           // 此處省略之前的表單提交處理代碼以節省空間，保持不變
+           // 獲取表單資料
+           const formData = {
+               name: document.getElementById('name').value,
+               account: document.getElementById('account').value,
+               email: document.getElementById('email').value,
+               department: document.getElementById('department').value,
+               issue: document.getElementById('issue').value,
+               googleCheck: document.getElementById('google-check').value,
+               aiCheck: document.getElementById('ai-check').value,
+               date: new Date().toLocaleString() // 提交日期
+           };
+           // 從 localStorage 獲取現有的提交資料
+           let submissions = JSON.parse(localStorage.getItem('submissions')) || [];
+           // 將新資料追加到現有的資料列表中
+           submissions.push(formData);
+           // 將更新後的資料存回 localStorage
+           localStorage.setItem('submissions', JSON.stringify(submissions));
+           // 顯示確認訊息
+           document.getElementById('repairForm').style.display = 'none';
+           document.getElementById('confirmation').style.display = 'block';
+           // 更新畫面右邊的提交資料列表
+           updateSubmissionsList(submissions);
        });
 
        // 更新畫面右邊的提交資料列表
        function updateSubmissionsList(submissions) {
-           // 此處省略之前的updateSubmissionsList函數代碼以節省空間，保持不變
+           const submissionsList = document.getElementById('submissionsList');
+           submissionsList.innerHTML = ''; // 清空現有內容
+           submissions.forEach((submission, index) => {
+               const submissionItem = document.createElement('div');
+               submissionItem.className = 'submission-item';
+               submissionItem.innerHTML = `
+                   <p><strong>姓名：</strong>${submission.name}</p>
+                   <p><strong>帳號：</strong>${submission.account}</p>
+                   <p><strong>Email：</strong>${submission.email}</p>
+                   <p><strong>部門：</strong>${submission.department}</p>
+                   <p><strong>問題描述：</strong>${submission.issue}</p>
+                   <p><strong>是否已 Google：</strong>${submission.googleCheck}</p>
+                   <p><strong>是否已問過 AI：</strong>${submission.aiCheck}</p>
+                   <p><strong>提交日期：</strong>${submission.date}</p>
+               `;
+               submissionsList.appendChild(submissionItem);
+           });
        }
 
        // 頁面載入時顯示現有的提交資料
        window.onload = function() {
-           // 此處省略之前的window.onload函數代碼以節省空間，保持不變
+           const submissions = JSON.parse(localStorage.getItem('submissions')) || [];
+           updateSubmissionsList(submissions);
        };
 
        // 顯示管理員登入表單
        function showAdminLogin() {
            document.getElementById('adminLogin').style.display = 'block';
+           document.getElementById('overlay').style.display = 'block';
        }
 
        // 管理員登入表單提交事件處理
        document.getElementById('loginForm').addEventListener('submit', function(event) {
            event.preventDefault(); // 防止表單提交
-
            const account = document.getElementById('loginAccount').value;
            const password = document.getElementById('loginPassword').value;
-
            // 驗證帳號和密碼
            if (account === 'repair' && password === 'goodfix168') {
                // 登入成功，導向管理員後台
